--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -1,8 +1,14 @@
+
 <h1>Portofolio Items</h1>
+
+<%= link_to "Create a new item", new_portofolioo_path %>
+
+
 
 <% @portofolios_items.each do |portofolio_item| %>
   <p><%= portofolio_item.title %></p>
   <p><%= portofolio_item.subtitle %></p>
   <p><%= portofolio_item.body %></p>
   <%= image_tag portofolio_item.thumb_image unless portofolio_item.thumb_image.nil? %>
+  <%= link_to "Edit", edit_portofolioo_path(portofolio_item.id) %>
 <% end %>
