--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -6,9 +6,9 @@
 
 
 <% @portofolios_items.each do |portofolio_item| %>
-  <p><%= portofolio_item.title %></p>
+  <p><%= link_to portofolio_item.title, portofolioo_path(portofolio_item) %></p>
   <p><%= portofolio_item.subtitle %></p>
   <p><%= portofolio_item.body %></p>
   <%= image_tag portofolio_item.thumb_image unless portofolio_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_portofolioo_path(portofolio_item.id) %>
+  <%= link_to "Edit", edit_portofolioo_path(portofolio_item) %>
 <% end %>
