--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -6,7 +6,7 @@
 
 
 <% @portofolios_items.each do |portofolio_item| %>
-  <p><%= link_to portofolio_item.title, portofolioo_path(portofolio_item) %></p>
+  <p><%= link_to portofolio_item.title, portofolioo_show_path(portofolio_item) %></p>
   <p><%= portofolio_item.subtitle %></p>
   <p><%= portofolio_item.body %></p>
   <%= image_tag portofolio_item.thumb_image unless portofolio_item.thumb_image.nil? %>
