Implemented confg for nested attributes

--- a/app/views/portofolioos/show.html.erb
+++ b/app/views/portofolioos/show.html.erb
@@ -4,3 +4,10 @@
 
 <em><%= @portofolios_items.subtitle %></em>
 <p><%= @portofolios_items.body %></p>
+
+<h2>Technologies used</h2>
+
+<% @portofolios_items.technologies.each do |t| %>
+<p><%= t.name %></p>
+
+<% end %>
