--- a/app/views/portofolioos/edit.html.erb
+++ b/app/views/portofolioos/edit.html.erb
@@ -1,24 +1,3 @@
 <h1>Edit this portofolio item</h1>
 
-<%= form_for(@portofolios_items) do |f| %>
-
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle %>
-  </div>
-
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-  
-<% end %>
+<%= render 'form', portofolioo_item: @portofolioo_item %>
