--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,8 +17,7 @@
     <%= yield %>
    <%= render "shared/nav", location: 'bottom'  %>
     
-    <% if session[:source] %>
-    <p>Thanks for visiting from <%= session[:source] %></p>
-    <% end %>
+      <%= source_helper("blog") %>
+  
   </body>
 </html>
