Added partials for portfolio and blogs

--- a/app/views/portofolioos/_form.html.erb
+++ b/app/views/portofolioos/_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a new portofolio item</h1>
 
-<%= form_for(@portofolios_items) do |f| %>
+<%= form_for(@portofolioos_items) do |f| %>
 
   <div class="field">
     <%= f.label :title %>
