--- a/app/views/portofolioos/show.html.erb
+++ b/app/views/portofolioos/show.html.erb
@@ -1,13 +1,13 @@
-<%= image_tag @portofolios_items.main_image %>
+<%= image_tag @portofolioos_items.main_image %>
 
-<h1><%= @portofolios_items.title %></h1>
+<h1><%= @portofolioos_items.title %></h1>
 
-<em><%= @portofolios_items.subtitle %></em>
-<p><%= @portofolios_items.body %></p>
+<em><%= @portofolioos_items.subtitle %></em>
+<p><%= @portofolioos_items.body %></p>
 
 <h2>Technologies used</h2>
 
-<% @portofolios_items.technologies.each do |t| %>
+<% @portofolioos_items.technologies.each do |t| %>
 <p><%= t.name %></p>
 
 <% end %>
