--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -3,13 +3,5 @@
 
 <%= link_to "Create a new item", new_portofolioo_path %>
 
-
-
-<% @portofolios_items.each do |portofolio_item| %>
-  <p><%= link_to portofolio_item.title, portofolioo_show_path(portofolio_item) %></p>
-  <p><%= portofolio_item.subtitle %></p>
-  <p><%= portofolio_item.body %></p>
-  <%= image_tag portofolio_item.thumb_image unless portofolio_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_portofolioo_path(portofolio_item) %>
-   <%= link_to 'Delete', portofolioo_path(portofolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= render partial: 'portofolioo_item', collection: @portofolioos_items %>
+ 
