--- a/app/views/portofolioos/_portofolioo_item.html.erb
+++ b/app/views/portofolioos/_portofolioo_item.html.erb
@@ -5,6 +5,6 @@
   <p><%= portofolioo_item.body %></p>
   
   <%= image_tag portofolioo_item.thumb_image unless portofolioo_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_portofolioo_path(portofolioo_item) %>
+  <%= link_to "Edit", edit_portofolioo_path(portofolioo_item) if logged_in?(:site_admin) %>
    <%= link_to 'Delete', portofolioo_path(portofolioo_item), method: 
-   :delete, data: { confirm: 'Are you sure?' } %>
+   :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
