Registration page styled

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About me</h1>
+<p>I'm a 20 years old Croat who was raised in Bosnia and Herzegovina. Apart from being a software developer, I enjoy following stock market, TV shows and movies, sports
+, listening to music, reading books related to human psychology. You'll mostly find me spending my time with my family and friends I love. </p>
