--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,26 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "+4541900484" %></p>
+<h1>You're up for a friendly or a bussines talk ?</h1>
+
+<hr>
+
+<div class="row">
+  <div class ="col-md-6">
+    <h3>Home Address</h3>
+    <p>Kollegievaenget 30, Horsens, Denmark</p>
+    
+     <h3>Phone Number</h3>
+     <p>+(45)-41-90-04-84</p>
+     
+     <h3>Email</h3>
+     <p><a href = "mailto: deanbozic12@gmail.com?subject=PortfolioContact" "email me">Email me</a></p>
+     </div>
+     
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.
+     401312542641!2d9.884898915746703!3d55.87305299017883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+     1!3m3!1m2!1s0x464c63be1b2e1843%3A0x86babf9f1c4e5a4e!2sKollegiev%C3%A6nget+30%2C+8700+Horsens!5e0!3m2!1sen!2sdk!4v1489793108268" 
+     width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+     
+     <div class="col-md-6">
+  </div>
+</div>
 
 
