--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -160,3 +160,12 @@ body {
     width: 55rem;
   }
 }
+
+.card-block{
+  color: black;
+  text-aling: left;
+}
+
+.auth-links a{
+  color: black;
+}
