Styled registration/edit path

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -163,9 +163,14 @@ body {
 
 .card-block{
   color: black;
-  text-aling: left;
+  text-align: left;
 }
 
 .auth-links a{
   color: black;
 }
+
+.inner{
+  margin-bottom: -12px;
+}
+
