Styled registration path

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -158,8 +158,11 @@ body {
   .mastfoot,
   .cover-container {
     width: 55rem;
+    
   }
 }
+
+
 
 .card-block{
   color: black;
@@ -172,5 +175,9 @@ body {
 
 .inner{
   margin-bottom: -12px;
+}
+
+.register-text{
+  text-align: right;
 }
 
