--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,4 @@
-
+@import "font-awesome";
 @import "bootstrap";
 
 /*
@@ -166,4 +166,8 @@ h6, .h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+.social-links li{
+  font-size: 2.5em;
 }
