--- a/app/views/portofolioos/_portofolioo_item.html.erb
+++ b/app/views/portofolioos/_portofolioo_item.html.erb
@@ -1,10 +1,6 @@
- <p><%= link_to portofolioo_item.title, portofolioo_show_path(portofolioo_item) %></p>
- 
-  <p><%= portofolioo_item.subtitle %></p>
-  
-  <p><%= portofolioo_item.body %></p>
-  
+<div class="card">
   <%= image_tag portofolioo_item.thumb_image unless portofolioo_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_portofolioo_path(portofolioo_item) if logged_in?(:site_admin) %>
-   <%= link_to 'Delete', portofolioo_path(portofolioo_item), method: 
-   :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+  <p class="card-text">
+    <span><%= link_to portofolioo_item.title, portofolioo_show_path(portofolioo_item) %></span> <%= portofolioo_item.subtitle %>
+  </p>
+</div>
