--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -1,7 +1,7 @@
-
-<h1>Portofolio Items</h1>
-
-<%= link_to "Create a new item", new_portofolioo_path if logged_in?(:site_admin) %>
-
-<%= render partial: 'portofolioo_item', collection: @portofolioos_items %>
- 
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+      <%= render partial: 'portofolioo_item', collection: @portofolioos_items %>
+    </div>
+  </div>
+</div>
