--- a/app/views/shared/_portofolioo_footer.html.erb
+++ b/app/views/shared/_portofolioo_footer.html.erb
@@ -3,6 +3,7 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
+      <%= link_to "View All Portfolios Items", portofolioos_path %>
       <a href="#">Back to top</a>
     </p>
     <p><%= copyright_generator %></p>
