Updated changes for show portfolio section

--- a/app/views/layouts/portofolioo.html.erb
+++ b/app/views/layouts/portofolioo.html.erb
@@ -15,7 +15,7 @@
   <body>
    <%= render "shared/portofolioo_nav" %>
 
-   <%= render "shared/portofolioo_masthead" %>
+   <%= render "shared/portofolioo_masthead" unless logged_in?(:site_admin) %>
   
     <%= yield %>
     
