--- a/app/assets/stylesheets/portofolioos.scss
+++ b/app/assets/stylesheets/portofolioos.scss
@@ -1,8 +1,5 @@
-// Place all the styles related to the Portofolioos controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 @import "bootstrap";
+
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
@@ -60,4 +57,10 @@ footer {
 
 footer p {
   margin-bottom: .25rem;
+}
+
+/* Custom styles */
+
+.portfolio-form {
+  padding: 20px;
 }
