--- a/app/views/portofolioos/edit.html.erb
+++ b/app/views/portofolioos/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit this portofolio item</h1>
+<div class="container portfolio-form">
+  <h1>Edit this Portfolio Item</h1>
 
-<%= render 'form', portofolioo_item: @portofolioo_item %>
+  <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
