Integrated initial drag and drop implementation

--- a/app/views/portofolioos/index.html.erb
+++ b/app/views/portofolioos/index.html.erb
@@ -1,6 +1,6 @@
 <div class="album text-muted">
   <div class="container">
-    <div class="row">
+    <div class="row sortable">
       <%= render partial: 'portofolioo_item', collection: @portofolioos_items %>
     </div>
   </div>
