Implemented persistand updates for drag and drop interface

--- a/app/views/portofolioos/_portofolioo_item.html.erb
+++ b/app/views/portofolioos/_portofolioo_item.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" data-id="<%= portofolioo_item.id %>">
   <%= image_tag portofolioo_item.thumb_image unless portofolioo_item.thumb_image.nil? %>
   <p class="card-text">
     <span><%= link_to portofolioo_item.title, portofolioo_show_path(portofolioo_item) %></span> <%= portofolioo_item.subtitle %>
