Updated images for about-me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,15 @@
-<h1>About me</h1>
-<p>I'm a 20 years old Croat who was raised in Bosnia and Herzegovina. Apart from being a software developer, I enjoy following stock market, TV shows and movies, sports
-, listening to music, reading books related to human psychology. You'll mostly find me spending my time with my family and friends I love. </p>
+<h1>About Me</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "profile.png", width: 300, alt: "profile image" %>
+  </div>
+
+          <div class="col-md-8">
+        <p>I'm a 20 years old Croat who was raised in Bosnia and Herzegovina. Apart from being a software developer, I enjoy following stock market, TV shows and movies, sports
+        , listening to music, reading books related to human psychology. You'll mostly find me spending my time with my family and friends I love. </p>
+
+    </div>
+</div>
