--- a/app/views/portofolioos/show.html.erb
+++ b/app/views/portofolioos/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container portfolio-container">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag portofolioo_img(@portofolioos_items.thumb_image, 'main'), width: '100%' %>
+      <%= image_tag portofolioo_img(@portofolioos_items.main_image, 'main'), width: '100%' %>
     </div>
 
     <div class="col-md-5">
@@ -19,6 +19,11 @@
 
       <% @portofolioos_items.technologies.each do |t| %>
       <p><%= t.name %></p>
+      <% end %>
+      <% if logged_in?(:site_admin) %>
+        <div class="">
+          <%= link_to "Edit Item", edit_portofolioo_path(@portofolioos_items), class: 'btn btn-warning' %>
+        </div>
       <% end %>
     </div>
   </div>
