--- a/app/views/portofolioos/_form.html.erb
+++ b/app/views/portofolioos/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_for(@portofolioos_items) do |f| %>
+ <% if @portofolioos_items.errors.any? %>
+    <% @portofolioos_items.errors.full_messages.each do |error| %>
+      <%= js add_gritter(error, title: "Dean Bozic Portfolio", sticky: false) %>
+    <% end %>
+  <% end %>
+  
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
