--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,19 +9,9 @@
     <%= @blog.body %>
   </p>
   
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |f| %>
-      <div class = "form-group">
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'form-control' %>
-      </div>
-        
-      <div>
-        <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
-      </div>
-      
-    <%end%>
-  <% end %>
-  <%= render @blog.comments %>
- 
+  <%= render 'comments/comment_form' %>
+  
+  <div id="comments" data-blog-id="<%= @blog.id %>">
+    <%= render @blog.comments %>
+  </div>
 </div>
