--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 
  <div class="inner cover">
-        <h1 class="cover-heading">Welcome to my virtual record</h1>
-        <p class="lead">“Don’t worry if it doesn’t work right. If everything did, you’d be out of a job.”</p>
+        <h1 class="cover-heading">Hello !</h1>
         <p class="lead">
         <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
          </p>
