Styled about me and contact page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -217,3 +217,48 @@ body {
 .app-footer{
   color: white;
 }
+
+.app-card-container{
+  color: black;
+  text-align: left;
+}
+
+.app-card-container >.card{
+  
+}
+
+.profile-img{
+  border: 1px solid grey;
+  margin-bottom: 40px;
+  
+}
+
+  
+.app-card-container a{
+  color:black;
+  
+}
+
+
+
+.title{
+  text-align: center;
+}
+
+.row{
+  text-align: center;
+}
+
+#about-me{
+  margin-top: 10px;
+}
+
+.card-block {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.skill {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
