--- a/app/views/portofolioos/_portofolioo_item.html.erb
+++ b/app/views/portofolioos/_portofolioo_item.html.erb
@@ -1,6 +1,8 @@
+<div class ="col-md-4">
 <div class="card" data-id="<%= portofolioo_item.id %>">
-  <%= image_tag portofolioo_img(portofolioo_item.thumb_image, 'thumb') %>
+  <%= image_tag portofolioo_img(portofolioo_item.thumb_image, 'thumb'), width: '100%' %>
   <p class="card-text">
     <span><%= link_to portofolioo_item.title, portofolioo_show_path(portofolioo_item) %></span> <%= portofolioo_item.subtitle %>
   </p>
+  </div>
 </div>
