--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,6 +1,7 @@
 <div class="blog-header">
   <div class="container">
     <h1 class="blog-title">My Blog</h1>
+     <p class="blog-note">These articles are NOT written by me! </br> Articles were originaly published  <a href="http://www.technewsworld.com/">here</a></p>
     <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
   </div>
 </div>
