--- a/app/assets/stylesheets/portofolioos.scss
+++ b/app/assets/stylesheets/portofolioos.scss
@@ -4,11 +4,32 @@
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
+    font-family: 'Lato', sans-serif;
 }
 
 .navbar {
   margin-bottom: 0;
 }
+
+@font-face {
+  font-family: 'Lato';
+  src:font-url('Lato-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto Slab';
+  src:font-url('RobotoSlab-Regular.ttf');
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Roboto Slab', serif;
+}
+
 
 .jumbotron {
   padding-top: 6rem;
