--- a/app/views/shared/_portofolioo_nav.html.erb
+++ b/app/views/shared/_portofolioo_nav.html.erb
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-sm-8 py-4">
         <h4 class="text-white">About</h4>
-        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+        <p class="text-muted">Here you can find some of my projects and current work. Some of them are part of my undergraduate education, while some are build due to my curiosity.
+        I strive to constantly expand my knowledge and my portfolio. Recently I mostly immersed myself into cyber security and everything behind it. </p>
       </div>
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Explore</h4>
